# Log-Quantum-Fractal-Tree-LQFT-

./: .coverage  .gitignore  MANIFEST.in  advanced_lqft_stress_suite.py  demo_lqft.py  github_setup.ps1  initialize_lqft.py  lqft_engine.c  lqft_engine.py  perplexity_benchmark_suite.py  plan.md  production_verdict_assessment.py  publish.ps1  pure_python_ds.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  stress_test_memory_win.py  test_pure_python_ds.py  validation.py  version.txt
.github/workflows/: main.yml  release.yml
benchmarks/: adaptive_benchmark.py  complexity_crossover.py  complexity_demonstrator.py  comprehensive_benchmark.py  graph_vs_lqft.py  leetcode_187_test.py  markelproofV.py  memory_benchmark.py  tree_comparison_report.py  trie_vs_lqft_benchmark.py
tests/: test_phase9_sharded_map.py  test_phase9_sharded_storage_cli.py  test_phase9_sharded_storage_engine.py
