[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for Python 3.8 to 3.12 (Enterprise standard range)
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"

# Skip 32-bit, PyPy, and musllinux for high-performance stability
skip = "*-win32 *_i686 pp* *-musllinux_*"

[tool.cibuildwheel.environment]
# Set high-performance optimization flags for the C compiler
CFLAGS="-O3 -Wall"

[tool.cibuildwheel.linux]
# Manylinux is the industry standard for portable Linux binaries
archs = ["x86_64"]
# (Removed 'yum install gcc' - Manylinux containers have it pre-installed natively)

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
# Support both Intel and Apple Silicon (M1/M2/M3) for universal compatibility
archs = ["x86_64", "arm64"]