[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *_i686 pp* *-musllinux_*"

# We removed the global CFLAGS environment variable here.
# setup.py now handles the optimization flags so Apple's cross-compiler 
# doesn't lose its `-arch x86_64` targeting flags.

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]